# wos-simulator

./: .dockerignore  .gitignore  CODE_REVIEW_ISSUES.md  Changelog.md  README.md  README_DASHBOARD.md  battle_main.py  check_testcases.py  compare_results.py  docker-compose.env.example  docker-compose.prod.yml  docker-compose.yml  index_bench.ts  last_battle_report.json  optimized_compare_bench.ts  pyproject.toml  requirements.txt
Base_classes/: BattleRound.py  Fight.py  Fighter.py  Hero.py  JsonUtil.py  Skill.py  StatsBonus.py  UnitType.py
assets/: troop_skills.json  troop_stats.json
dashboard/: README.md  __init__.py  backfill.py  check_now.py  coverage.py  ingest.py  ocr_report.py  optimize_ratio.py  seed_heroes.py  sim_paths.py  simulate_battle.py  simulate_common.py  state_capture.py  test_check_now.py  test_ingest.py  test_seed_heroes.py
docs/: wos-sim-production-deployment.md
fighters_data/: fighters_heroes.json  fighters_stats.json
knowledge/: accuracy_dashboard.md  browser-simulator-feasibility.md  hero-skill-schema-v2-proposal.md
scripts/: benchmark_tournament_battle_modes.test.ts  benchmark_tournament_battle_modes.ts  fit_enemy_base_stats.test.ts  fit_enemy_base_stats.ts  run_testcases.test.ts  run_testcases.ts  testcase_worker.ts  testcase_worker_pool.ts  tournament_dual_swiss.test.ts  tournament_dual_swiss.ts  tournament_swiss.test.ts  tournament_swiss.ts  wos-prod-deploy.sh  wos-sync-sim-runs.sh  wos443_bucket_membership_matrix.ts
simulator/: .gitignore  SUBAGENT_DELEGATION_PLAYBOOK.md  battle-core-rewrite-spec.md  package-lock.json  package.json
(+846 files in other folders)
