[project]
name = "wos-simulator"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy==2.4.2",
    "onnxruntime==1.23.2",
    "opencv-python-headless==4.13.0.92",
    "Pillow==12.2.0",
    "pytesseract==0.3.13",
    "rapidocr==3.8.1",
    "tabulate==0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
